@@ -2713,11 +2713,6 @@
                  ))
     (should-not (string-match-p regexp-unmatchable str))))
 
-(declare-function dired-get-marked-files "dired")
-(ert-deftest dired-get-marked-files ()
-  (require 'dired)
-  (should-error (compat-call dired-get-marked-files nil nil nil nil t)))
-
 (ert-deftest use-region ()
   (with-temp-buffer
     (insert "abc\ndef\n")
