@@ -1361,6 +1361,97 @@ This function creates an empty file named @var{filename}.  As
 function signals an error.
 @end defun
 
+@defun text-property-search-forward prop &optional value predicate not-current
+Search for the next region that has text property @var{prop} set to
+@var{value} according to @var{predicate}.
+
+This function is modeled after @code{search-forward} and friends in
+that it moves point, but it returns a structure that describes the
+match instead of returning it in @code{match-beginning} and friends.
+
+If the text property can't be found, the function returns @code{nil}.
+If it's found, point is placed at the end of the region that has this
+text property match, and a @code{prop-match} structure is returned.
+
+@var{predicate} can either be @code{t} (which is a synonym for
+@code{equal}), @code{nil} (which means ``not equal''), or a predicate
+that will be called with two parameters: The first is @var{value}, and
+the second is the value of the text property we're inspecting.
+
+If @var{not-current}, if point is in a region where we have a match,
+then skip past that and find the next instance instead.
+
+The @code{prop-match} structure has the following accessors:
+@code{prop-match-beginning} (the start of the match),
+@code{prop-match-end} (the end of the match), and
+@code{prop-match-value} (the value of @var{property} at the start of
+the match).
+
+In the examples below, imagine that you're in a buffer that looks like
+this:
+
+@example
+This is a bold and here's bolditalic and this is the end.
+@end example
+
+That is, the ``bold'' words are the @code{bold} face, and the
+``italic'' word is in the @code{italic} face.
+
+With point at the start:
+
+@lisp
+(while (setq match (text-property-search-forward 'face 'bold t))
+  (push (buffer-substring (prop-match-beginning match)
+                          (prop-match-end match))
+        words))
+@end lisp
+
+This will pick out all the words that use the @code{bold} face.
+
+@lisp
+(while (setq match (text-property-search-forward 'face nil t))
+  (push (buffer-substring (prop-match-beginning match)
+                          (prop-match-end match))
+        words))
+@end lisp
+
+This will pick out all the bits that have no face properties, which
+will result in the list @samp{("This is a " "and here's " "and this is
+the end")} (only reversed, since we used @code{push}).
+
+@lisp
+(while (setq match (text-property-search-forward 'face nil nil))
+  (push (buffer-substring (prop-match-beginning match)
+                          (prop-match-end match))
+        words))
+@end lisp
+
+This will pick out all the regions where @code{face} is set to
+something, but this is split up into where the properties change, so
+the result here will be @samp{("bold" "bold" "italic")}.
+
+For a more realistic example where you might use this, consider that
+you have a buffer where certain sections represent URLs, and these are
+tagged with @code{shr-url}.
+
+@lisp
+(while (setq match (text-property-search-forward 'shr-url nil nil))
+  (push (prop-match-value match) urls))
+@end lisp
+
+This will give you a list of all those URLs.
+
+@xref{elisp,,,Property Search}.
+@end defun
+
+@defun text-property-search-backward prop &optional value predicate not-current
+This is just like @code{text-property-search-forward}, but searches
+backward instead.  Point is placed at the beginning of the matched
+region instead of the end, though.
+
+@xref{elisp,,,Property Search}.
+@end defun
+
 @subsection Extended Definitions
 These functions must be called explicitly via @code{compat-call},
 since their calling convention or behavior was extended in Emacs 27.1:
@@ -1481,105 +1572,6 @@ remote directory, @var{program} is searched on the respective remote host.
 
 This compatibility version adds support to handle the optional second
 (@var{remote}) argument.
-@end defun
-
-@defun compat-call@ dired-get-marked-files &optional localp arg filter distinguish-one-marked error
-Return a list of file names that are @emph{marked} in a Dired buffer.
-
-This compatibility version handles the optional fifth (@var{error})
-argument, which signals an error if the list of found files is empty.
-@code{error} can be a string with the error message.
-@end defun
-
-@defun text-property-search-forward prop &optional value predicate not-current
-Search for the next region that has text property @var{prop} set to
-@var{value} according to @var{predicate}.
-
-This function is modeled after @code{search-forward} and friends in
-that it moves point, but it returns a structure that describes the
-match instead of returning it in @code{match-beginning} and friends.
-
-If the text property can't be found, the function returns @code{nil}.
-If it's found, point is placed at the end of the region that has this
-text property match, and a @code{prop-match} structure is returned.
-
-@var{predicate} can either be @code{t} (which is a synonym for
-@code{equal}), @code{nil} (which means ``not equal''), or a predicate
-that will be called with two parameters: The first is @var{value}, and
-the second is the value of the text property we're inspecting.
-
-If @var{not-current}, if point is in a region where we have a match,
-then skip past that and find the next instance instead.
-
-The @code{prop-match} structure has the following accessors:
-@code{prop-match-beginning} (the start of the match),
-@code{prop-match-end} (the end of the match), and
-@code{prop-match-value} (the value of @var{property} at the start of
-the match).
-
-In the examples below, imagine that you're in a buffer that looks like
-this:
-
-@example
-This is a bold and here's bolditalic and this is the end.
-@end example
-
-That is, the ``bold'' words are the @code{bold} face, and the
-``italic'' word is in the @code{italic} face.
-
-With point at the start:
-
-@lisp
-(while (setq match (text-property-search-forward 'face 'bold t))
-  (push (buffer-substring (prop-match-beginning match)
-                          (prop-match-end match))
-        words))
-@end lisp
-
-This will pick out all the words that use the @code{bold} face.
-
-@lisp
-(while (setq match (text-property-search-forward 'face nil t))
-  (push (buffer-substring (prop-match-beginning match)
-                          (prop-match-end match))
-        words))
-@end lisp
-
-This will pick out all the bits that have no face properties, which
-will result in the list @samp{("This is a " "and here's " "and this is
-the end")} (only reversed, since we used @code{push}).
-
-@lisp
-(while (setq match (text-property-search-forward 'face nil nil))
-  (push (buffer-substring (prop-match-beginning match)
-                          (prop-match-end match))
-        words))
-@end lisp
-
-This will pick out all the regions where @code{face} is set to
-something, but this is split up into where the properties change, so
-the result here will be @samp{("bold" "bold" "italic")}.
-
-For a more realistic example where you might use this, consider that
-you have a buffer where certain sections represent URLs, and these are
-tagged with @code{shr-url}.
-
-@lisp
-(while (setq match (text-property-search-forward 'shr-url nil nil))
-  (push (prop-match-value match) urls))
-@end lisp
-
-This will give you a list of all those URLs.
-
-@xref{elisp,,,Property Search}.
-@end defun
-
-@defun text-property-search-backward prop &optional value predicate not-current
-This is just like @code{text-property-search-forward}, but searches
-backward instead.  Point is placed at the beginning of the matched
-region instead of the end, though.
-
-@xref{elisp,,,Property Search}.
 @end defun
 
 @subsection Missing Definitions
