@@ -3,6 +3,7 @@
 * Development
 
 - compat-26: Add ~make-temp-file~ with optional argument TEXT.
+- compat-27: Mark ~compat-call dired-get-marked-files~ as obsolete.
 - compat-29: Add ~funcall-with-delayed-message~ and ~with-delayed-message~.
 - compat-29: Add ~ert-with-temp-file~ and ~ert-with-temp-directory~.
 - compat-29: Add ~set-transient-map~ with optional arguments MESSAGE and TIMEOUT.
